Closed
Bug 706743
Opened 11 years ago
Closed 11 years ago
Drag site icon into bookmark folder annoyance: tooltip gets in the way
Categories
(Core :: XUL, defect)
Tracking
()
RESOLVED
FIXED
mozilla11
People
(Reporter: kdevel, Assigned: masayuki)
References
Details
(Keywords: regression, Whiteboard: [inbound])
Attachments
(2 files)
1.50 MB,
video/ogg
|
Details | |
6.95 KB,
patch
|
enndeakin
:
review+
|
Details | Diff | Splinter Review |
User Agent: Steps to reproduce: 1. Open http://www.mozilla.org/en-US/firefox/new/ 2. Create some bookmark folders below the url bar. 3. Try to drag-n-drop the site icon into a bookmark folder below the appearing tooltip. Actual results: 3. The tooltip thwarts the attempt to drop the icon into the bookmark folder. Expected results: 3. Don't display a tooltip when in "drag state". Remarks: 1. The tooltip which appears when the mouse is just hovering over the site icon can be canceld with the control key. 2. The tooltip pops up again when moving the dragged site icon outwards. This tooltip cannot be canceld. 3. Despite its name, setting browser.chrome.toolbar_tips to false also disables tooltips within the page.
Attachment #578168 -
Attachment mime type: application/octet-stream → video/ogg
![]() |
||
Comment 2•11 years ago
|
||
Confirmed on http://hg.mozilla.org/mozilla-central/rev/cc94a16983b0 Mozilla/5.0 (X11; Linux i686; rv:11.0a1) Gecko/20111130 Firefox/11.0a1 ID:20111130031011 It seems to happen only on Linux. *This happens on Ubuntu10.04. *This does not happen on Windows7. Steps to reproduce(more reproducible): 1. Open http://www.mozilla.org/en-US/firefox/new/ 2. Create some bookmark folders below the url bar. 3-1. Once pop up tooltip by mouseover the site icon 3-2. Mousedown on the site icon 3-3. Move mouse pointer slowly within the site icon (do not mouseup and do not move the pointer outside of a location bar til tooltip pops up). 3-4. Continue drag and try to drop to the folder Regression window(m-c) Works: http://hg.mozilla.org/mozilla-central/rev/bc48009a6bbb Mozilla/5.0 (X11; Linux i686; rv:11.0a1) Gecko/20111129 Firefox/11.0a1 ID:20111129031019 Fails: http://hg.mozilla.org/mozilla-central/rev/e320f9f5536f Mozilla/5.0 (X11; Linux i686; rv:11.0a1) Gecko/20111129 Firefox/11.0a1 ID:20111129040354 Pushlog: http://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=bc48009a6bbb&tochange=e320f9f5536f Regression window(m-c) Works: http://hg.mozilla.org/integration/mozilla-inbound/rev/6fac8a564c92 Mozilla/5.0 (X11; Linux i686; rv:11.0a1) Gecko/20111128 Firefox/11.0a1 ID:20111128191320 Fails: http://hg.mozilla.org/integration/mozilla-inbound/rev/b2a4048facc0 Mozilla/5.0 (X11; Linux i686; rv:11.0a1) Gecko/20111128 Firefox/11.0a1 ID:20111128204020 Pushlog: http://hg.mozilla.org/integration/mozilla-inbound/pushloghtml?fromchange=6fac8a564c92&tochange=b2a4048facc0 Triggered by: b2a4048facc0 Masayuki Nakano — Bug 703210 XUL tooltip listener should use system event group for listening to content events r=smaug+enn
Blocks: 703210
Status: UNCONFIRMED → NEW
Component: General → XUL
Ever confirmed: true
Keywords: regression
OS: Other → Linux
Product: Firefox → Core
QA Contact: general → xptoolkit.widgets
Hardware: Other → All
![]() |
||
Comment 3•11 years ago
|
||
And this problem happens not only for the site icon but also for bookmarks menuitem. Steps to reproduce: 1. Open Bookmarks Menu 2. Once pop up tooltip by mouseover bookmarks menuitem 3. Mousedown on the bookmarks menuitem 4. Move mouse pointer slowly within the menuitem (do not mouseup and do not move the pointer outside the menupopup til tooltip pops up). 5. Continue drag within the menupopup
Assignee | ||
Comment 4•11 years ago
|
||
I cannot reproduce this bug on Mac. I have no idea why only on Linux, this is reproducible.
Assignee | ||
Comment 5•11 years ago
|
||
After drag start event, mousemove event (and mouseout) event is fired on Linux...
Assignee | ||
Comment 6•11 years ago
|
||
I think that this a bug of gtk2 widget. The unexpected mousemove event is fired by platform (confirmed by stack trace). Ideally, we should fix the gtk2 widget behavior. However, this is a regression and should be fixed ASAP. I'll post a patch which makes nsXULTooltipListener manage dragging state. I'm going to write a test for the patch tomorrow.
Assignee: nobody → masayuki
Status: NEW → ASSIGNED
Assignee | ||
Comment 7•11 years ago
|
||
This patch makes nsXULTooltipListener not handle mousemove and mouseout events during drag. The events shouldn't be dispatched during drag but tooltip shouldn't be shown by the unexpected events. The automated test doesn't emulate actual mouse operation because it's impossible when I wrote it. On Windows, the javascript timer won't work after called native DnD API until actual mouse operation happens. Therefore, it tests the code like unit-testing. I'll file new bug for gtk2 widget later.
Attachment #578892 -
Flags: review?(enndeakin)
Assignee | ||
Comment 8•11 years ago
|
||
enn: ping
Comment 9•11 years ago
|
||
Comment on attachment 578892 [details] [diff] [review] Patch But please do fix the actual cause of the bug.
Attachment #578892 -
Flags: review?(enndeakin) → review+
Assignee | ||
Comment 10•11 years ago
|
||
Yeah, of course. https://hg.mozilla.org/integration/mozilla-inbound/rev/cd38a6bad3be
Flags: in-testsuite+
Whiteboard: [inbound]
Target Milestone: --- → mozilla11
Comment 11•11 years ago
|
||
https://hg.mozilla.org/mozilla-central/rev/cd38a6bad3be
Status: ASSIGNED → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•