Bug 706743 tooltip listener should ignore mousemove and mouseout events during drag r=enndeakin